@startuml

class Employee {
+ Employee(int,String,int,String)
}

class Manager {
+ Manager(int,String,int,String,String)
}

class Director {
+ Director(int,String,int,String,String,double)
}

interface Factory {
+ Employee create(String)
}

class EmployeeFactory {
+ Employee create(String)
}

class ManagerFactory {
+ Manager create(String)
}

class DirectorFactory {
+ Director create(String)
}

Factory <|.. EmployeeFactory
Manager <|-- Director
Factory <|.. ManagerFactory
Employee <|-- Manager
Factory <|.. DirectorFactory

EmployeeFactory .left.> Employee : creates
ManagerFactory .left.> Manager : creates
DirectorFactory .left.> Director : creates
@enduml